k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: enspirit
  labels:
    app: finitio
  name: finitio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finitio
  template:
    metadata:
      labels:
        app: finitio
    spec:
      containers:
        - image: enspirit/finitio
          name: finitio
          ports:
            - containerPort: 4000
