k8s/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: enspirit
  name: finitio
  labels:
    app: finitio
spec:
  selector:
    app: finitio
  ports:
    - port: 80
      name: http
      targetPort: 4000
