k8s/03-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: enspirit
  name: finitio
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: www.finitio.io
      http:
        paths:
          - backend:
              serviceName: finitio
              servicePort: 80
    - host: finitio.io
      http:
        paths:
          - backend:
              serviceName: finitio
              servicePort: 80
  tls:
    - hosts:
        - www.finitio.io
      secretName: finitio-ssl
    - hosts:
        - finitio.io
      secretName: finitio-root-ssl
